[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-prep-mcp"
version = "0.1.0"
description = "MCP server for LeetCode practice problem management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "python-slugify>=8.0.0",
    "tenacity>=9.1.2",
    "aiolimiter>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.18.0",
]

[project.scripts]
interview-prep-mcp = "interview_prep_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests that make real API calls (deselect with '-m \"not integration\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
# Strictest possible configuration
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

# Additional strict checks beyond --strict
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true

# Disallow dynamic typing
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true

# Disallow untyped code
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# Warnings
warn_return_any = true
warn_unreachable = true
warn_no_return = true

# Strictness for optionals and imports
no_implicit_reexport = true
strict_optional = true

# Show more information
show_error_context = true
show_column_numbers = true
show_error_code_links = true
pretty = true

# Exclude virtual environment
exclude = ["venv/"]

# Pydantic plugin configuration
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Per-module overrides for untyped libraries
[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true
disallow_any_unimported = false
disallow_any_expr = false
disallow_untyped_calls = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "bs4.*"
ignore_missing_imports = true
disallow_any_unimported = false
disallow_any_expr = false

[[tool.mypy.overrides]]
module = "interview_prep_mcp.server"
disallow_any_expr = false
disallow_any_decorated = false
disallow_untyped_decorators = false
disallow_untyped_calls = false
disallow_any_explicit = false

[[tool.mypy.overrides]]
module = "interview_prep_mcp.tools.*"
disallow_any_expr = false
disallow_any_explicit = false

[[tool.mypy.overrides]]
module = "interview_prep_mcp.leetcode.client"
disallow_any_expr = false
disallow_any_explicit = false
disallow_untyped_calls = false